# rack-leds

./: .envrc  .gitignore  Cargo.toml  bacon.toml
.config/: config.json5
display/: LICENSE.md  main.py  requirements.txt
rack-leds/: Cargo.toml
rack-leds/.config/: config.toml
rack-leds/src/: args.rs  columns.rs  config.rs  devices.rs  http.rs  init.rs  main.rs  png_builder.rs  simulator.rs  ui.rs  update.rs
rack-leds/src/collector/: absolute.rs  diff.rs
rack-leds/src/config/: column.rs  device.rs
rack-leds/src/device/: id.rs
rack-leds/src/ui/: action.rs  app.rs  components.rs  gradient.rs  tui.rs
rack-leds/src/ui/components/: fps.rs  home.rs  log.rs
rack-leds/src/update/: access_point.rs  switch.rs
ratatui-tracing/: Cargo.toml
ratatui-tracing/src/: env_filter.rs  event.rs  event_receiver.rs  history.rs  lib.rs  reloadable.rs  scope.rs  to_scope_visitor.rs  widgets.rs
ratatui-tracing/src/widgets/: create_filter.rs  create_filter_state.rs  detail.rs  detail_state.rs  event_log.rs  event_log_state.rs  filter.rs  filter_edit.rs  filter_edit_state.rs  filter_state.rs  format.rs  format_state.rs  level.rs  on_off.rs  scope_display.rs  time_format.rs  view_state.rs
src/: args.rs  collector.rs  column.rs  config.rs  device.rs  devices.rs  diff.rs  http.rs  init.rs  layout.rs  main.rs  png_builder.rs  prometheus.rs  ratatui_tracing.rs  simulator.rs  tui_tracing.rs  ui.rs  update.rs
src/collector/: absolute.rs  data.rs  diff.rs  prometheus.rs  update.rs
src/collector/prometheus/: manager.rs
src/collector/update/: switch.rs
src/config/: column.rs  device.rs
src/device/: access_point.rs  id.rs  switch.rs
src/ratatui_tracing/: env_filter.rs  event.rs  event_log.rs  event_receiver.rs  filter.rs  filter_edit.rs  format.rs  history.rs  log_line.rs  reloadable.rs  scope.rs  to_scope_visitor.rs  widgets.rs
src/ratatui_tracing/format/: inner.rs  scope.rs  time_format.rs
src/ratatui_tracing/widgets/: event_log.rs  event_log_state.rs  filter.rs  filter_edit.rs  filter_state.rs  format.rs  format_state.rs  time_format.rs  view_state.rs
src/ui/: action.rs  app.rs  components.rs  config.rs  gradient.rs  tui.rs  widgets.rs
src/ui/components/: event_log.rs  fps.rs  help.rs  home.rs
src/ui/widgets/: border.rs  display.rs
src/update/: switch.rs
