[package]
name = "rack-leds"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
better-panic = "0.3.0"
bytes = "1.8.0"
clap = { version = "4.5.19", features = ["derive"] }
color-art = "0.3.8"
color-eyre = "0.6.3"
colorgrad = "0.7.0"
config = "0.14.0"
console-subscriber = "0.4.0"
crossterm = { version = "0.28.1", features = ["serde", "event-stream"] }
derive_deref = "1.1.1"
directories = "5.0.1"
eyre = "0.6.12"
futures = "0.3.30"
http-body-util = "0.1.2"
httpdate = "1.0.3"
human-panic = "2.0.1"
hyper = { version = "1.5.0", features = ["http1", "server"] }
hyper-util = { version = "0.1.9", features = ["tokio"] }
itertools = "0.13.0"
json5 = "0.4.1"
libc = "0.2.159"
png = "0.17.14"
pretty_assertions = "1.4.0"
prometheus-http-query = "0.8.3"
ratatui = { version = "0.28.1", features = ["serde", "macros", "unstable-rendered-line-info"] }
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
signal-hook = "0.3.17"
strip-ansi-escapes = "0.2.0"
strum = { version = "0.26.3", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full", "tracing"] }
tokio-util = "0.7.11"
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "time", "local-time"] }
